# quant-cache

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ja.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
analysis/: requirements.txt
crates/qc-cli/: Cargo.toml
crates/qc-cli/src/: main.rs
crates/qc-cli/src/commands/: calibrate.rs  compare.rs  compile.rs  compile_compare.rs  deploy_check.rs  generate.rs  import.rs  mod.rs  optimize.rs  pipeline.rs  policy_eval.rs  policy_search.rs  simulate.rs
crates/qc-cli/src/commands/compile/: akamai.rs  cloudflare.rs  cloudfront.rs  fastly.rs  mod.rs
crates/qc-cli/src/providers/: cloudflare.rs  cloudfront.rs  fastly.rs  mod.rs
crates/qc-cli/tests/: compile_golden.rs  import_e2e.rs  parser_tests.rs
crates/qc-ffi/: Cargo.toml
crates/qc-ffi/examples/: example.py
crates/qc-ffi/include/: quant_cache.h
crates/qc-ffi/src/: lib.rs
crates/qc-model/: Cargo.toml
crates/qc-model/src/: compact_trace.rs  error.rs  intern.rs  lib.rs  metrics.rs  object.rs  origin_cost.rs  policy.rs  policy_ir.rs  preset.rs  scenario.rs  trace.rs
crates/qc-model/tests/: policy_ir_roundtrip.rs  roundtrip.rs
crates/qc-simulate/: Cargo.toml
crates/qc-simulate/benches/: trace_replay.rs
crates/qc-simulate/src/: baselines.rs  co_access.rs  compact_baselines.rs  comparator.rs  engine.rs  error.rs  group_interactions.rs  ir_policy.rs  lib.rs  reuse_distance.rs  synthetic.rs
crates/qc-simulate/tests/: acceptance.rs  compact_parity.rs  compare_fast.rs  group_interactions.rs  ir_policy.rs  parametric_validation.rs  perf_guard.rs  pipeline_e2e.rs  proptest_invariants.rs  replay.rs  synthetic.rs
crates/qc-solver/: Cargo.toml
crates/qc-solver/benches/: greedy_solver.rs
crates/qc-solver/src/: calibrate.rs  error.rs  greedy.rs  ilp.rs  lib.rs  policy_qubo.rs  policy_search.rs  qubo.rs  score.rs  solver.rs
crates/qc-solver/tests/: acceptance.rs  calibrate.rs  greedy.rs  ilp.rs  perf_guard.rs  policy_search.rs  proptest_invariants.rs  qubo.rs  scoring.rs
data/samples/: ecommerce.toml  small.csv
data/schemas/: trace-event-v1.toml
docs/: 2026-04-02_paper-review-round2.md  2026-04-02_strategic-direction.md  ARCHITECTURE.md  formulation.md  output-formats.md  related-work.md  roadmap.md  tech-stack.md  testing-strategy.md  usage-guide.md  v1-design.md  value-transition-proposal.md
