[package]
name = "qc-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI interface for quant-cache CDN cache optimizer"

[[bin]]
name = "qc"
path = "src/main.rs"

[dependencies]
qc-model = { workspace = true }
qc-solver = { workspace = true }
qc-simulate = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
csv = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
