[package]
name = "qc-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Data types for quant-cache CDN cache optimization"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
