[package]
name = "qc-solver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Scoring and optimization engine for quant-cache"

[dependencies]
qc-model = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
good_lp = { workspace = true }
rand = "0.8"

[dev-dependencies]
proptest = "1"
qc-simulate = { workspace = true }
serde_json = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "greedy_solver"
harness = false
